manifest-k8s/deployment-billing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
  labels:
    app: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: billing-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
