manifest-k8s/deployment-delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
      - name: delivery
        image: delivery-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
