manifest-k8s/deployment-eshop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-deployment
  labels:
    app: eshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop
  template:
    metadata:
      labels:
        app: eshop
    spec:
      containers:
      - name: eshop
        image: eshop:latest
        ports:
        - containerPort: 8080
