manifest-k8s/deployment-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: inventory-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
