manifest-k8s/deployment-logistic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistic
  labels:
    app: logistic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logistic
  template:
    metadata:
      labels:
        app: logistic
    spec:
      containers:
      - name: logistic
        image: logistic-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
