manifest-k8s/service-billing.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing
  ports:
    - protocol: TCP
      port: 8080
