manifest-k8s/service-delivery.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery
  ports:
    - protocol: TCP
      port: 8080
