manifest-k8s/service-eshop.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop
spec:
  selector:
    app: eshop
  ports:
    - protocol: TCP
      port: 8080
