manifest-k8s/service-jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - name: thrift
      protocol: TCP
      port: 14268
      targetPort: 14268  
    - name: frontend
      protocol: TCP
      port: 16686
      targetPort: 16686
