manifest-k8s/service-logistic.yaml
apiVersion: v1
kind: Service
metadata:
  name: logistic-service
spec:
  selector:
    app: logistic
  ports:
    - protocol: TCP
      port: 8080
